Voxel rendering and gui input

--- a/terravox/imgui.ini
+++ b/terravox/imgui.ini
@@ -8,3 +8,15 @@ Pos=206,104
 Size=274,231
 Collapsed=0
 
+[Window][Image Window]
+Pos=57,28
+Size=1584,801
+Collapsed=1
+
+[Window][Hello, world]
+Pos=82,101
+Size=205,195
+Collapsed=1
+
+[Docking][Data]
+
