--- a/terravox/terravox.vcxproj
+++ b/terravox/terravox.vcxproj
@@ -89,7 +89,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\Developer\ecs_game\ecs_game\vendor\glew-2.1.0\include;D:\Developer\ecs_game\ecs_game\vendor\glm;D:\Developer\ecs_game\ecs_game\vendor\glfw3.3.8\include;D:\Developer\ecs_game\ecs_game\vendor\imgui\include;D:\Developer\ecs_game\ecs_game\vendor\stbi;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Developer\terravox\terravox\vendor\glew-2.1.0\include;D:\Developer\terravox\terravox\vendor\glm;D:\Developer\terravox\terravox\vendor\glfw3.3.8\include;D:\Developer\terravox\terravox\vendor\imgui\include;D:\Developer\terravox\terravox\vendor\stbi;D:\Developer\terravox\terravox\vendor\nlohmann;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -106,7 +106,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\Developer\ecs_game\ecs_game\vendor\glew-2.1.0\include;D:\Developer\ecs_game\ecs_game\vendor\glm;D:\Developer\ecs_game\ecs_game\vendor\glfw3.3.8\include;D:\Developer\ecs_game\ecs_game\vendor\imgui\include;D:\Developer\ecs_game\ecs_game\vendor\stbi;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Developer\terravox\terravox\vendor\glew-2.1.0\include;D:\Developer\terravox\terravox\vendor\glm;D:\Developer\terravox\terravox\vendor\glfw3.3.8\include;D:\Developer\terravox\terravox\vendor\imgui\include;D:\Developer\terravox\terravox\vendor\stbi;D:\Developer\terravox\terravox\vendor\nlohmann;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -123,7 +123,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\Developer\ecs_game\ecs_game\vendor\glew-2.1.0\include;D:\Developer\ecs_game\ecs_game\vendor\glm;D:\Developer\ecs_game\ecs_game\vendor\glfw3.3.8\include;D:\Developer\ecs_game\ecs_game\vendor\imgui\include;D:\Developer\ecs_game\ecs_game\vendor\stbi;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Developer\terravox\terravox\vendor\glew-2.1.0\include;D:\Developer\terravox\terravox\vendor\glm;D:\Developer\terravox\terravox\vendor\glfw3.3.8\include;D:\Developer\terravox\terravox\vendor\imgui\include;D:\Developer\terravox\terravox\vendor\stbi;D:\Developer\terravox\terravox\vendor\nlohmann;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -140,7 +140,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\Developer\ecs_game\ecs_game\vendor\glew-2.1.0\include;D:\Developer\ecs_game\ecs_game\vendor\glm;D:\Developer\ecs_game\ecs_game\vendor\glfw3.3.8\include;D:\Developer\ecs_game\ecs_game\vendor\imgui\include;D:\Developer\ecs_game\ecs_game\vendor\stbi;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Developer\terravox\terravox\vendor\glew-2.1.0\include;D:\Developer\terravox\terravox\vendor\glm;D:\Developer\terravox\terravox\vendor\glfw3.3.8\include;D:\Developer\terravox\terravox\vendor\imgui\include;D:\Developer\terravox\terravox\vendor\stbi;D:\Developer\terravox\terravox\vendor\nlohmann;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -152,13 +152,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\graphics\CubeTexture.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\application.cpp" />
     <ClCompile Include="src\graphics\Mesh.cpp" />
     <ClCompile Include="src\gui.cpp" />
     <ClCompile Include="src\input.cpp" />
     <ClCompile Include="src\window.cpp" />
-    <ClCompile Include="src\Texture.cpp" />
+    <ClCompile Include="src\graphics\Texture.cpp" />
     <ClCompile Include="vendor\imgui\lib\imgui.cpp" />
     <ClCompile Include="vendor\imgui\lib\imgui_demo.cpp" />
     <ClCompile Include="vendor\imgui\lib\imgui_draw.cpp" />
@@ -166,14 +167,16 @@
     <ClCompile Include="vendor\imgui\lib\imgui_impl_opengl3.cpp" />
     <ClCompile Include="vendor\imgui\lib\imgui_tables.cpp" />
     <ClCompile Include="vendor\imgui\lib\imgui_widgets.cpp" />
+    <ClCompile Include="src\graphics\Voxel.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\graphics\CubeTexture.h" />
     <ClInclude Include="src\application.h" />
     <ClInclude Include="src\graphics\Mesh.h" />
     <ClInclude Include="src\gui.h" />
     <ClInclude Include="src\input.h" />
     <ClInclude Include="src\window.h" />
-    <ClInclude Include="src\Texture.h" />
+    <ClInclude Include="src\graphics\Texture.h" />
     <ClInclude Include="vendor\imgui\include\imconfig.h" />
     <ClInclude Include="vendor\imgui\include\imgui.h" />
     <ClInclude Include="vendor\imgui\include\imgui_impl_glfw.h" />
@@ -183,15 +186,21 @@
     <ClInclude Include="vendor\imgui\include\imstb_rectpack.h" />
     <ClInclude Include="vendor\imgui\include\imstb_textedit.h" />
     <ClInclude Include="vendor\imgui\include\imstb_truetype.h" />
+    <ClInclude Include="src\graphics\Voxel.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\shaders\coordinates.vs" />
     <None Include="src\shaders\fragment-basic.glsl" />
+    <None Include="src\shaders\fragmentCube.glsl" />
+    <None Include="src\shaders\fragmentSky.glsl" />
     <None Include="src\shaders\transform.fs" />
     <None Include="src\shaders\fragment.glsl" />
     <None Include="src\shaders\transform.vs" />
     <None Include="src\shaders\vertex-basic.glsl" />
     <None Include="src\shaders\vertex.glsl" />
+    <None Include="src\shaders\vertexsky.glsl" />
+    <None Include="src\shaders\vertexVoxel.glsl" />
+    <None Include="src\textures\atlases\blocks.json" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
