--- a/terravox/terravox.vcxproj.filters
+++ b/terravox/terravox.vcxproj.filters
@@ -54,7 +54,13 @@
     <ClCompile Include="src\graphics\Mesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Texture.cpp">
+    <ClCompile Include="src\graphics\Texture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\graphics\Voxel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\graphics\CubeTexture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -101,7 +107,13 @@
     <ClInclude Include="src\graphics\Mesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Texture.h">
+    <ClInclude Include="src\graphics\Texture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\graphics\Voxel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\graphics\CubeTexture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -113,5 +125,10 @@
     <None Include="src\shaders\transform.vs" />
     <None Include="src\shaders\transform.fs" />
     <None Include="src\shaders\coordinates.vs" />
+    <None Include="src\shaders\vertexsky.glsl" />
+    <None Include="src\shaders\fragmentSky.glsl" />
+    <None Include="src\shaders\fragmentCube.glsl" />
+    <None Include="src\textures\atlases\blocks.json" />
+    <None Include="src\shaders\vertexVoxel.glsl" />
   </ItemGroup>
 </Project>
